refac: 코드 컨벤션